templates/ingress/aws-ing/dashboard-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet:  rewrite ^(/db)$ $1/ redirect;
spec:
  rules:
  - host: k8s-1.maifuj.com
    http:
      paths:
      - path: /db(/|$)(.*)    #/db is matched with rewrite ^(/db)
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
